Upgrade to Karaf 4.3.7